tests/neg-inline-trait/disallow-def-in-inline-trait.scala
inline trait Foo:
    def foo: Any // error
